--- a/config/packages/paginator.yaml
+++ b/config/packages/paginator.yaml
@@ -1,3 +1,4 @@
 knp_paginator:
+    page_range: 2
     template:
-        pagination: "@KnpPaginator/Pagination/bootstrap_v5_pagination.html.twig"
+        pagination: "@KnpPaginator/Pagination/twitter_bootstrap_v3_pagination.html.twig"
