--- a/config/packages/knp_paginator.yaml
+++ b/config/packages/knp_paginator.yaml
@@ -2,3 +2,4 @@ knp_paginator:
     page_range: 2
     template:
         pagination: "@KnpPaginator/Pagination/twitter_bootstrap_v3_pagination.html.twig"
+        sortable: "@KnpPaginator/Pagination/bootstrap_v5_fa_sortable_link.html.twig"
