--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=env
 APP_SECRET=03efc143a69cd494d5fb17e34af9d54b
 ###< symfony/framework-bundle ###
 
