--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,11 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
+    role_hierarchy:
+        # un ROLE doit TOUJOURS commencer par ROLE_
+        ROLE_ADMIN: ROLE_MANAGER
+        ROLE_MANAGER: ROLE_USER
+
 when@test:
     security:
         password_hashers:
