Characters menu on the quotes page is dynamic

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,6 +5,7 @@ twig:
         seasonsList: '@App\Twig\SeasonsExtension'
         quizzsList: '@App\Twig\QuizzsExtension'
         currentUser: '@App\Twig\CurrentUserExtension'
+        charactersVIP: '@App\Twig\CharactersExtension'
 when@test:
     twig:
         strict_variables: true
